force-app/main/default/objects/Cruise__c/Cruise__c.object-meta.xml
<CustomObject>
    <label>Cruise</label>
    <nameField>
        <label>Cruise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cruises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>