force-app/main/default/objects/Cruise__c/fields/Diet_Type__c.field-meta.xml
<CustomField>
    <fullName>Diet_Type__c</fullName>
    <label>Diet Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>