force-app/main/default/objects/Cruise__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tender boats</fullName>
            </value>
            <value>
                <fullName>Jet packs</fullName>
            </value>
            <value>
                <fullName>Dive and snorkel gear</fullName>
            </value>
            <value>
                <fullName>Seabobs</fullName>
            </value>
            <value>
                <fullName>Jetskis</fullName>
            </value>
            <value>
                <fullName>Fishrod</fullName>
            </value>
            <value>
                <fullName>kitesufing</fullName>
            </value>
            <value>
                <fullName>parasailing</fullName>
            </value>
            <value>
                <fullName>Aquapark</fullName>
            </value>
            <value>
                <fullName>Concert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>