force-app/main/default/objects/Cruise__c/fields/Guest_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Guest_Capacity__c</fullName>
    <label>Guest Capacity</label>
    <summarizedField>Cruise_Room__c.Capacity__c</summarizedField>
    <summaryForeignKey>Cruise_Room__c.Cruise__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>