force-app/main/default/objects/Cruise__c/fields/Lastest_Coordinate__c.field-meta.xml
<CustomField>
    <fullName>Lastest_Coordinate__c</fullName>
    <label>Lastest Coordinate</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>