force-app/main/default/objects/Cruise__c/fields/lat__c.field-meta.xml
<CustomField>
    <fullName>lat__c</fullName>
    <formula>Lastest_Coordinate__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lat</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>