force-app/main/default/objects/Cruise__c/fields/long__c.field-meta.xml
<CustomField>
    <fullName>long__c</fullName>
    <formula>Lastest_Coordinate__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>long</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>