force-app/main/default/objects/Cruise__c/fields/Ship_Owner__c.field-meta.xml
<CustomField>
    <fullName>Ship_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cruises</relationshipLabel>
    <relationshipName>Cruises</relationshipName>
    <type>Lookup</type>
</CustomField>