force-app/main/default/objects/Cruise__c/fields/Total_Room__c.field-meta.xml
<CustomField>
    <fullName>Total_Room__c</fullName>
    <label>Total Room</label>
    <summaryForeignKey>Cruise_Room__c.Cruise__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>