force-app/main/default/objects/Cruise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Call_sign__c</columns>
    <columns>Total_Room__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>